syntax = "proto3";

package io.restorecommerce.authentication_log;

import "google/protobuf/timestamp.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

/*
* Microservice definition.
*/
service AuthenticationLogService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (AuthenticationLogListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (AuthenticationLogList) returns (AuthenticationLogListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (AuthenticationLogList) returns (AuthenticationLogListResponse);
  rpc Upsert (AuthenticationLogList) returns (AuthenticationLogListResponse);
}

message AuthenticationLogList {
  repeated AuthenticationLog items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message AuthenticationLogListResponse {
  repeated AuthenticationLogResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message AuthenticationLogResponse {
  optional AuthenticationLog payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

/**
 * Authentication Log
 */
message AuthenticationLog {
  optional string id = 1; // log id
  optional string ipv4_address = 2;
  optional string ipv6_address = 3;
  optional string operating_system = 4;
  optional string user_agent = 5;
  optional google.protobuf.Timestamp date = 6; // time stamp of login, logout or token update
  optional string activity = 7; // login, logout
  optional io.restorecommerce.meta.Meta meta = 8; // meta info
  optional string subject_id = 9; // subject id
  optional string token_name = 10; // token name associated with io.restorecommerce.auth.Token.token_name
}

message Deleted {
  optional string id = 1;
}
